Tidy up the Intro for the 7 inch PDF

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -17,7 +17,7 @@ INTRODUCTION
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{17}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{14.5}{16.7}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16}{19.5}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
@@ -45,8 +45,8 @@ Well, those ``few short years'' have come to pass and it now devolves upon us --
 expand and fearlessly continue the living stream of the Fifth Epochal Revelation.
 And to all those fearful and unbelieving who would speedily accuse me of blasphemy I say with my Lord and my Master:
 ``My Father worketh hitherto, and I work'' (John~5:17).
-Nevertheless, I (and a team of others) have carefully preserved the original First Edition (1955) of \bibemph{The Urantia Book}
-and made it available on my website in both electronic and printed form:
+Nevertheless, I and a team of others have carefully preserved the original First Edition (1955) of \bibemph{The Urantia Book}
+and made it available on my website in both electronic and printed forms:
 
 \begin{center}
 \texttt{\normalsize http://www.bibles.org.uk/guardian-plates.html}
