Point out a quote from Plato Timaeus 37d Time is a moving image of eternity

--- a/tex/p189.tex
+++ b/tex/p189.tex
@@ -6,7 +6,7 @@
 \usection{1.\bibnobreakspace The Morontia Transit}
 \vs p189 1:1 At 02:45 Sunday morning, the Paradise incarnation commission, consisting of 7 unidentified Paradise personalities, arrived on the scene and immediately deployed themselves about the tomb. At 02:50, intense vibrations of commingled material and morontia activities began to issue from Joseph’s new tomb, and at 03:02, this Sunday morning, April 9, A.D.\,30, the resurrected morontia form and personality of Jesus of Nazareth came forth from the tomb.
 \vs p189 1:2 After the resurrected Jesus emerged from his burial tomb, the body of flesh in which he had lived and wrought on earth for almost 36 years was still lying there in the sepulchre niche, undisturbed and wrapped in the linen sheet, just as it had been laid to rest by Joseph and his associates on Friday afternoon. Neither was the stone before the entrance of the tomb in any way disturbed; the seal of Pilate was still unbroken; the soldiers were still on guard. The temple guards had been on continuous duty; the Roman guard had been changed at midnight. None of these watchers suspected that the object of their vigil had risen to a new and higher form of existence, and that the body which they were guarding was now a discarded outer covering which had no further connection with the delivered and resurrected morontia personality of Jesus.
-\vs p189 1:3 \pc Mankind is slow to perceive that, in all that is personal, matter is the skeleton of morontia, and that both are the reflected shadow of enduring spirit reality. How long before you will regard time as the moving image of eternity and space as the fleeting shadow of Paradise realities?
+\vs p189 1:3 \pc Mankind is slow to perceive that, in all that is personal, matter is the skeleton of morontia, and that both are the reflected shadow of enduring spirit reality. How long before you will regard time as the moving image of eternity\fnst{\textbf{time as the moving image of eternity}, This is a quote from Plato's ``Tim\ae us'' 37d. In Cooper's translation it reads: \bibemph{And so he began to think of making a moving image of eternity: at the same time as he brought order to the universe, he would make an eternal image, moving according to number, of eternity remaining in unity. This number, of course, is what we now call ``time.''}} and space as the fleeting shadow of Paradise realities?
 \vs p189 1:4 As far as we can judge, no creature of this universe nor any personality from another universe had anything to do with this morontia resurrection of Jesus of Nazareth. On Friday he laid down his life as a mortal of the realm; on Sunday morning he took it up again as a morontia being of the system of Satania in Norlatiadek. There is much about the resurrection of Jesus which we do not understand. But we know that it occurred as we have stated and at about the time indicated. We can also record that all known phenomena associated with this mortal transit, or morontia resurrection, occurred right there in Joseph’s new tomb, where the mortal material remains of Jesus lay wrapped in burial cloths.
 \vs p189 1:5 We know that no creature of the local universe participated in this morontia awakening. We perceived the seven personalities of Paradise surround the tomb, but we did not see them do anything in connection with the Master’s awakening. Just as soon as Jesus appeared beside Gabriel, just above the tomb, the seven personalities from Paradise signalized their intention of immediate departure for Uversa.
 \vs p189 1:6 Let us forever clarify the concept of the resurrection of Jesus by making the following statements:
