Add a few study notes

--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -29,7 +29,7 @@
 \vs p043 3:1 The rulers of the constellations are of the Vorondadek order of local universe sonship. When commissioned to active duty in the universe as constellation rulers or otherwise, these Sons are known as the \bibemph{Most Highs} since they embody the highest administrative wisdom, coupled with the most farseeing and intelligent loyalty, of all the orders of the Local Universe Sons of God. Their personal integrity and their group loyalty have never been questioned; no disaffection of the Vorondadek Sons has ever occurred in Nebadon.
 \vs p043 3:2 \pc At least three Vorondadek Sons are commissioned by Gabriel as the Most Highs of each of the Nebadon constellations. The presiding member of this trio is known as the \bibemph{Constellation Father} and his two associates as the \bibemph{senior Most High} and the \bibemph{junior Most High.} A Constellation Father reigns for 10,000 standard years (about 50,000 Urantia years), having previously served as junior associate and as senior associate for equal periods.
 \vs p043 3:3 The Psalmist knew that Edentia was ruled by three Constellation Fathers and accordingly spoke of their abode in the plural: “There is a river, the streams whereof shall make glad the city of God, the most holy place of the tabernacles of the Most Highs\fnst{\textbf{the Most Highs}, In the present Hebrew Massoretic text of Psalms~46:5(4 in Eng.), as well as all the Ancient Versions thereof which I have examined (Greek LXX, Latin Vulgate, Old Armenian, Syriac Peshitta, Aramaic Targum and Old Church Slavonic) ``the Most High'' appears in the \bibemph{singular}, not in the \bibemph{plural}.}.”
-\vs p043 3:4 \pc Down through the ages there has been great confusion on Urantia regarding the various universe rulers. Many later teachers confused their vague and indefinite tribal deities with the Most High Fathers. Still later, the Hebrews merged all of these celestial rulers into a composite Deity. One teacher understood that the Most Highs were not the Supreme Rulers, for he said, “He who dwells in the secret place of the Most High shall abide under the shadow of the Almighty.” In the Urantia records it is very difficult at times to know exactly who is referred to by the term “Most High.” But Daniel fully understood these matters. He said, “The Most High rules in the kingdom of men and gives it to whomsoever he will.”
+\vs p043 3:4 \pc Down through the ages there has been great confusion on Urantia regarding the various universe rulers. Many later teachers confused their vague and indefinite tribal deities with the Most High Fathers. Still later, the Hebrews merged all of these celestial rulers into a composite Deity. One teacher\fnst{\textbf{One teacher}, This is a quote from Psalm 91:1.} understood that the Most Highs were not the Supreme Rulers, for he said, “He who dwells in the secret place of the Most High shall abide under the shadow of the Almighty.” In the Urantia records it is very difficult at times to know exactly who is referred to by the term “Most High.” But Daniel fully understood\fnst{\textbf{Daniel fully understood}, The statement that follows is repeated \bibemph{three} times in the Book of Daniel: 4:17, 4:25 and 4:32.} these matters. He said, “The Most High rules in the kingdom of men and gives it to whomsoever he will.”
 \vs p043 3:5 \pc The Constellation Fathers are little occupied with the individuals of an inhabited planet, but they are closely associated with those legislative and lawmaking functions of the constellations which so greatly concern every mortal \bibemph{race} and national \bibemph{group} of the inhabited worlds.
 \vs p043 3:6 Although the constellation regime stands between you and the universe administration, as individuals you would ordinarily be little concerned with the constellation government. Your great interest would normally centre in the local system, Satania; but temporarily, Urantia is closely related to the constellation rulers because of certain system and planetary conditions growing out of the Lucifer rebellion.
 \vs p043 3:7 The Edentia Most Highs seized certain phases of planetary authority on the rebellious worlds at the time of the Lucifer secession. They have continued to exercise this power, and the Ancients of Days long since confirmed this assumption of control over these wayward worlds. They will no doubt continue to exercise this assumed jurisdiction as long as Lucifer lives. Much of this authority would ordinarily, in a loyal system, be invested in the System Sovereign.
@@ -40,9 +40,11 @@
 \vs p043 4:3 The residence of the Edentia Faithful of Days is the constellation centre of the Paradise system of extrauniverse communication and intelligence. These Trinity Sons, with their staffs of Havona and Paradise personalities, in liaison with the supervising Union of Days, are in direct and constant communication with their order throughout all the universes, even to Havona and Paradise.
 \vs p043 4:4 The most holy mount is exquisitely beautiful and marvellously appointed, but the actual residence of the Paradise Son is modest in comparison with the central abode of the Most Highs and the surrounding 70 structures comprising the residential unit of the Vorondadek Sons. These appointments are exclusively residential; they are entirely separate from the extensive administrative headquarters buildings wherein the affairs of the constellation are transacted.
 \vs p043 4:5 The residence of the Faithful of Days on Edentia is located to the north of these residences of the Most Highs and is known as the “mount of Paradise assembly.” On this consecrated highland the ascending mortals periodically assemble to hear this Son of Paradise tell of the long and intriguing journey of progressing mortals through the one billion perfection worlds of Havona and on to the indescribable delights of Paradise. And it is at these special gatherings on Mount Assembly that the morontia mortals become more fully acquainted with the various groups of personalities of origin in the central universe.
-\vs p043 4:6 The traitorous Lucifer, onetime sovereign of Satania, in announcing his claims to increased jurisdiction, sought to displace all superior orders of sonship in the governmental plan of the local universe. He purposed in his heart, saying: “I will exalt my throne above the Sons of God; I will sit upon the mount of assembly in the north; I will be like the Most High.”
+\vs p043 4:6 The traitorous Lucifer, onetime sovereign of Satania, in announcing his claims to increased jurisdiction, sought to displace all superior orders of sonship in the governmental plan of the local universe. He purposed in his heart\fnst{\textbf{He purposed in his heart}, cf. Isaiah~14:13 ``For thou hast said in thine heart, I will ascend into heaven, I will exalt
+my throne above the stars of God: I will sit also upon the mount of the
+congregation, in the sides of the north''.}, saying: “I will exalt my throne above the Sons of God; I will sit upon the mount of assembly in the north; I will be like the Most High.”
 \vs p043 4:7 \pc The 100 System Sovereigns come periodically to the Edentia conclaves which deliberate on the welfare of the constellation. After the Satania rebellion the archrebels of Jerusem were wont to come up to these Edentia councils just as they had on former occasions. And there was found no way to stop this arrogant effrontery until after the bestowal of Michael on Urantia and his subsequent assumption of unlimited sovereignty throughout all Nebadon. Never, since that day, have these instigators of sin been permitted to sit in the Edentia councils of the loyal System Sovereigns.
-\vs p043 4:8 That the teachers of olden times knew of these things is shown by the record: “And there was a day when the Sons of God came to present themselves before the Most Highs, and Satan came also and presented himself among them.” And this is a statement of fact regardless of the connection in which it chances to appear.
+\vs p043 4:8 That the teachers of olden times knew of these things is shown by the record\fnst{\textbf{record}, This is stated in Job 1:6 and Job 2:1.}: “And there was a day when the Sons of God came to present themselves before the Most Highs, and Satan came also and presented himself among them.” And this is a statement of fact regardless of the connection in which it chances to appear.
 \vs p043 4:9 \pc Since the triumph of Christ, all Norlatiadek is being cleansed of sin and rebels. Sometime before Michael’s death in the flesh the fallen Lucifer’s associate, Satan, sought to attend such an Edentia conclave, but the solidification of sentiment against the archrebels had reached the point where the doors of sympathy were so well\hyp{}nigh universally closed that there could be found no standing ground for the Satania adversaries. When there exists no open door for the reception of evil, there exists no opportunity for the entertainment of sin. The doors of the hearts of all Edentia closed against Satan; he was unanimously rejected by the assembled System Sovereigns, and it was at this time that the Son of Man “beheld Satan fall as lightning from heaven.”
 \vs p043 4:10 Since the Lucifer rebellion a new structure has been provided near the residence of the Faithful of Days. This temporary edifice is the headquarters of the Most High liaison, who functions in close touch with the Paradise Son as adviser to the constellation government in all matters respecting the policy and attitude of the order of Days toward sin and rebellion.
 \usection{5.\bibnobreakspace The Edentia Fathers since the Lucifer Rebellion}
@@ -61,7 +63,7 @@
 \vs p043 5:13 \ublistelem{11.}\bibnobreakspace The Most High liaison, the Vorondadek Son attached to the Edentia rulers but commissioned as a special counsellor with the Faithful of Days regarding the best course to pursue in the management of problems pertaining to rebellion and creature disloyalty.
 \vs p043 5:14 \ublistelem{12.}\bibnobreakspace The Most High director, the president of the emergency council of Edentia. All personalities assigned to Norlatiadek because of the Satania upheaval constitute the emergency council, and their presiding officer is a Vorondadek Son of extraordinary experience.
 \vs p043 5:15 And this takes no account of the numerous Vorondadeks, envoys of Nebadon constellations, and others who are also resident on Edentia.
-\vs p043 5:16 \pc Ever since the Lucifer rebellion the Edentia Fathers have exercised a special care over Urantia and the other isolated worlds of Satania. Long ago the prophet recognized the controlling hand of the Constellation Fathers in the affairs of nations. “When the Most High divided to the nations their inheritance, when he separated the sons of Adam, he set the bounds of the people.”
+\vs p043 5:16 \pc Ever since the Lucifer rebellion the Edentia Fathers have exercised a special care over Urantia and the other isolated worlds of Satania. Long ago the prophet\fnst{\textbf{prophet}, The quote is from the controversial verse of Deuteronomy~32:8 which in the Hebrew ends with ``according to the number of the children of Israel'', but in the Greek LXX it ends with ``according to the number of angels of God''. Note that the present text simply omits this whole clause as irrelevant.} recognized the controlling hand of the Constellation Fathers in the affairs of nations. “When the Most High divided to the nations their inheritance, when he separated the sons of Adam, he set the bounds of the people.”
 \vs p043 5:17 Every quarantined or isolated world has a Vorondadek Son acting as an observer. He does not participate in planetary administration except when ordered by the Constellation Father to intervene in the affairs of the nations. Actually it is this Most High observer who “rules in the kingdoms of men.” Urantia is one of the isolated worlds of Norlatiadek, and a Vorondadek observer has been stationed on the planet ever since the Caligastia betrayal. When Machiventa Melchizedek ministered in semimaterial form on Urantia, he paid respectful homage to the Most High observer then on duty, as it is written, “And Melchizedek, king of Salem, was the priest of the Most High.” Melchizedek revealed the relations of this Most High observer to Abraham when he said, “And blessed be the Most High, who has delivered your enemies into your hand.”
 \usection{6.\bibnobreakspace The Gardens of God}
 \vs p043 6:1 The system capitals are particularly beautified with material and mineral constructions, while the universe headquarters is more reflective of spiritual glory, but the capitals of the constellations are the acme of morontia activities and living embellishments. On the constellation headquarters worlds living embellishment is more generally utilized, and it is this preponderance of life --- botanic artistry --- that causes these worlds to be called “the gardens of God.”
