Fix the note at 43:4.6

--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -40,9 +40,7 @@
 \vs p043 4:3 The residence of the Edentia Faithful of Days is the constellation centre of the Paradise system of extrauniverse communication and intelligence. These Trinity Sons, with their staffs of Havona and Paradise personalities, in liaison with the supervising Union of Days, are in direct and constant communication with their order throughout all the universes, even to Havona and Paradise.
 \vs p043 4:4 The most holy mount is exquisitely beautiful and marvellously appointed, but the actual residence of the Paradise Son is modest in comparison with the central abode of the Most Highs and the surrounding 70 structures comprising the residential unit of the Vorondadek Sons. These appointments are exclusively residential; they are entirely separate from the extensive administrative headquarters buildings wherein the affairs of the constellation are transacted.
 \vs p043 4:5 The residence of the Faithful of Days on Edentia is located to the north of these residences of the Most Highs and is known as the “mount of Paradise assembly.” On this consecrated highland the ascending mortals periodically assemble to hear this Son of Paradise tell of the long and intriguing journey of progressing mortals through the one billion perfection worlds of Havona and on to the indescribable delights of Paradise. And it is at these special gatherings on Mount Assembly that the morontia mortals become more fully acquainted with the various groups of personalities of origin in the central universe.
-\vs p043 4:6 The traitorous Lucifer, onetime sovereign of Satania, in announcing his claims to increased jurisdiction, sought to displace all superior orders of sonship in the governmental plan of the local universe. He purposed in his heart\fnst{\textbf{He purposed in his heart}, cf. Isaiah~14:13 ``For thou hast said in thine heart, I will ascend into heaven, I will exalt
-my throne above the stars of God: I will sit also upon the mount of the
-congregation, in the sides of the north''.}, saying: “I will exalt my throne above the Sons of God; I will sit upon the mount of assembly in the north; I will be like the Most High.”
+\vs p043 4:6 The traitorous Lucifer, onetime sovereign of Satania, in announcing his claims to increased jurisdiction, sought to displace all superior orders of sonship in the governmental plan of the local universe. He purposed in his heart\fnst{\textbf{He purposed in his heart}, cf. Isaiah~14:13-14 ``For thou hast said in thine heart, I will ascend into heaven, I will exalt my throne above the stars of God: I will sit also upon the mount of the congregation, in the sides of the north. I will ascend above the heights of the clouds; I will be like the most High.''.}, saying: “I will exalt my throne above the Sons of God; I will sit upon the mount of assembly in the north; I will be like the Most High.”
 \vs p043 4:7 \pc The 100 System Sovereigns come periodically to the Edentia conclaves which deliberate on the welfare of the constellation. After the Satania rebellion the archrebels of Jerusem were wont to come up to these Edentia councils just as they had on former occasions. And there was found no way to stop this arrogant effrontery until after the bestowal of Michael on Urantia and his subsequent assumption of unlimited sovereignty throughout all Nebadon. Never, since that day, have these instigators of sin been permitted to sit in the Edentia councils of the loyal System Sovereigns.
 \vs p043 4:8 That the teachers of olden times knew of these things is shown by the record\fnst{\textbf{record}, This is stated in Job 1:6 and Job 2:1.}: “And there was a day when the Sons of God came to present themselves before the Most Highs, and Satan came also and presented himself among them.” And this is a statement of fact regardless of the connection in which it chances to appear.
 \vs p043 4:9 \pc Since the triumph of Christ, all Norlatiadek is being cleansed of sin and rebels. Sometime before Michael’s death in the flesh the fallen Lucifer’s associate, Satan, sought to attend such an Edentia conclave, but the solidification of sentiment against the archrebels had reached the point where the doors of sympathy were so well\hyp{}nigh universally closed that there could be found no standing ground for the Satania adversaries. When there exists no open door for the reception of evil, there exists no opportunity for the entertainment of sin. The doors of the hearts of all Edentia closed against Satan; he was unanimously rejected by the assembled System Sovereigns, and it was at this time that the Son of Man “beheld Satan fall as lightning from heaven.”
