Adjust fontsize for Introduction for A4 build

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -8,14 +8,14 @@
 \makeatother
 
 \begin{center}
-\Large\tunemarkup{pgafour}{\huge}\tunemarkup{pgauraone}{\LARGE}\bfseries
+\Large\tunemarkup{pgafour}{\LARGE}\tunemarkup{pgauraone}{\LARGE}\bfseries
 INTRODUCTION
 \end{center}
 
 \tunemarkup{pghanlin}{\fontsize{16}{19}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{15.5}{18}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
-\tunemarkup{pgafour}{\fontsize{17}{20}\selectfont}
+\tunemarkup{pgafour}{\fontsize{15}{17}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16}{19.5}\selectfont}
