--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -26,7 +26,6 @@
 %\tunemarkuptag{academy}
 %\tunemarkuptag{palatino}
 %\tunemarkuptag{oldstandard}
-%\tunemarkuptag{gentium}
 %\tunemarkuptag{bookman}
 %\tunemarkuptag{arno}
 %\tunemarkuptag{century}
@@ -127,8 +126,8 @@
 \def\urantiaexplfont{Minion Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{18}{21}\selectfont}
-\newcommand{\urantiamainfontsize}{18/21}
+\newcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{16/19}
 }
 
 \tunemarkup{academy}{%
@@ -169,22 +168,8 @@
 \def\urantiaexplfont{Old Standard}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{15/19}
-}
-
-\tunemarkup{gentium}{%
-\def\urantiamainfont{Gentium Book Basic}
-\def\urantiaparttitlefont{GoudyHandtooled BT}
-\def\urantiatitlefont{Gentium Book Basic}
-\def\urantiaheaderfont{Gentium Book Basic}
-\def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Gentium Book Basic}
-\def\urantiaexplfont{Gentium Book Basic}
-\def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
-\renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{16/19}
+\newcommand{\bibbookend}{\fontsize{15.6}{20}\selectfont}
+\newcommand{\urantiamainfontsize}{15.6/20}
 }
 
 \tunemarkup{bookman}{%
@@ -254,8 +239,8 @@
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
 \newcommand{\authorfont}{\fontsize{10.5}{9}\bfseries\itshape}%
-\newcommand{\bibbookend}{\fontsize{13}{17}\selectfont}
-\newcommand{\urantiamainfontsize}{13/17}
+\newcommand{\bibbookend}{\fontsize{14}{17}\selectfont}
+\newcommand{\urantiamainfontsize}{14/17}
 }
 
 \tunemarkup{fedra}{%
@@ -1149,15 +1134,15 @@
 }
 
 %\newfontfamily\greekfont[Mapping=tex-text]{Galatia SIL}
-%\newfontfamily\greekfont[Mapping=tex-text]{SBL Greek}
+\newfontfamily\greekfont[Mapping=tex-text]{SBL Greek}
 %\newfontfamily\greekfont[Mapping=tex-text]{Minion Pro}
 \newfontfamily\hebrewfont[Mapping=tex-text,Script=Hebrew]{Ezra SIL}
 \newfontfamily\armfont[Mapping=tex-text,Script=Armenian]{ArTarumianGrqiBardzr_U}
 \newfontfamily\chinesefont[Mapping=tex-text]{Code2000}
 \newcommand{\textheb}[1]{{\hebrewfont#1}}
 \newcommand{\textarm}[1]{{\armfont#1}}
-%\newcommand{\textgreek}[1]{{\greekfont#1}}
-\newcommand{\textgreek}[1]{#1}
+\newcommand{\textgreek}[1]{{\greekfont#1}}
+%\newcommand{\textgreek}[1]{#1}
 \newcommand{\textchinese}[1]{{\chinesefont#1}}
 
 \def\ackn{Acknowledgement}
