Remove obsolete URL.

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -90,7 +90,7 @@ Edited by Tigran Aivazian\\[2ex]
 \textbf{\upshape\nocopyright\ No copyright is claimed on this book\\
 The original text of \bibemph{The Urantia Papers} is in the public domain\\
 The present text of \bibemph{The Revised Urantia Papers} is also hereby placed in the public domain}.\\[5pt]
-\tunemarkuptwo{coverimage}{Cover design by Gary Tonge, www.vision-afar.com.\\}{}
+\tunemarkuptwo{coverimage}{Cover design by Gary Tonge.\\}{}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
 Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
