Configure the "big tablet" build more completely.

--- a/tex/paper-titles.tex
+++ b/tex/paper-titles.tex
@@ -35,6 +35,7 @@
 \upapertitle{19}{The Co-ordinate Trinity-Origin Beings}{Divine Counsellor}{p19}
 \upapertitle{20}{The Paradise Sons of God}{Perfector of Wisdom}{p20}
 \upapertitle{21}{The Paradise Creator Sons}{Perfector of Wisdom}{p21}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{22}{The Trinitized Sons of God}{Mighty Messenger}{p22}
 \upapertitle{23}{The Solitary Messengers}{Divine Counsellor}{p23}
 \upapertitle{24}{Higher Personalities of the Infinite Spirit}{Divine Counsellor}{p24}
@@ -62,6 +63,7 @@
 \upapertitle{40}{The Ascending Sons of God}{Mighty Messenger}{p40}
 \upapertitle{41}{Physical Aspects of the Local Universe}{Archangel}{p41}
 \upapertitle{42}{Energy — Mind and Matter}{Mighty Messenger}{p42}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{43}{The Constellations}{Malavatia Melchizedek}{p43}
 \upapertitle{44}{The Celestial Artisans}{Archangel}{p44}
 \upapertitle{45}{The Local System Administration}{Melchizedek}{p45}
@@ -90,6 +92,7 @@
 \upapertitle{63}{The First Human Family}{Life Carrier}{p63}
 \upapertitle{64}{The Evolutionary Races of Colour}{Life Carrier}{p64}
 \tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{65}{The Overcontrol of Evolution}{Life Carrier}{p65}
 \upapertitle{66}{The Planetary Prince of Urantia}{Melchizedek}{p66}
 \upapertitle{67}{The Planetary Rebellion}{Melchizedek}{p67}
@@ -118,6 +121,7 @@
 \upapertitle{87}{The Ghost Cults}{Brilliant Evening Star}{p87}
 \upapertitle{88}{Fetishes, Charms, and Magic}{Brilliant Evening Star}{p88}
 \upapertitle{89}{Sin, Sacrifice, and Atonement}{Brilliant Evening Star}{p89}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{90}{Shamanism — Medicine Men and Priests}{Melchizedek}{p90}
 \upapertitle{91}{The Evolution of Prayer}{Chief of Midwayers}{p91}
 \upapertitle{92}{The Later Evolution of Religion}{Melchizedek}{p92}
@@ -150,6 +154,7 @@
 \upapertitle{112}{Personality Survival}{Solitary Messenger}{p112}
 \upapertitle{113}{Seraphic Guardians of Destiny}{Chief of Seraphim}{p113}
 \upapertitle{114}{Seraphic Planetary Government}{Chief of Seraphim}{p114}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{115}{The Supreme Being}{Mighty Messenger}{p115}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{116}{The Almighty Supreme}{Mighty Messenger}{p116}
@@ -178,6 +183,7 @@
 \upapertitle{134}{The Transition Years}{Midwayer Commission}{p134}
 \upapertitle{135}{John the Baptist}{Midwayer Commission}{p135}
 \upapertitle{136}{Baptism and the Forty Days}{Midwayer Commission}{p136}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{137}{Tarrying Time in Galilee}{Midwayer Commission}{p137}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{138}{Training the Kingdom’s Messengers}{Midwayer Commission}{p138}
@@ -206,6 +212,7 @@
 \upapertitle{159}{The Decapolis Tour}{Midwayer Commission}{p159}
 \upapertitle{160}{Rodan of Alexandria}{Midwayer Commission}{p160}
 \upapertitle{161}{Further Discussions with Rodan}{Midwayer Commission}{p161}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{162}{At the Feast of Tabernacles}{Midwayer Commission}{p162}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \ifmultivol\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}\fi
@@ -237,6 +244,7 @@
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{185}{The Trial Before Pilate}{Midwayer Commission}{p185}
 \upapertitle{186}{Just Before the Crucifixion}{Midwayer Commission}{p186}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{187}{The Crucifixion}{Midwayer Commission}{p187}
 \upapertitle{188}{The Time of the Tomb}{Midwayer Commission}{p188}
 \upapertitle{189}{The Resurrection}{Midwayer Commission}{p189}
