--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -1013,8 +1013,9 @@
 \newcommand{\bibpaperfont}{\fontsize{13}{15}\bfseries}
 \newcommand{\bibpapertitlefont}{\fontsize{15}{17}\bfseries}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.2}{7.2}\selectfont}
-\renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{13}{16}\bfseries}
-\renewcommand{\bibtocfont}{\fontsize{9.9}{13.6}\selectfont}
+\newcommand{\bibtocsuperheadfont}{\fontsize{18}{20}\selectfont}
+\renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{12}\bfseries}
+\renewcommand{\bibtocfont}{\fontsize{7.6}{15}\selectfont}
 \newcommand{\bibheadpapersize}{\fontsize{8.0}{8.0}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{7.5}{7.5}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
@@ -1024,9 +1025,9 @@
 \newcommand{\bibsectitlefont}{\fontsize{9}{12}\selectfont}
 \renewcommand{\bibfnchapsize}{\large\bfseries}
 \renewcommand{\bibfnvssize}{\normalsize\bfseries}
-\renewcommand{\bibbookend}{\fontsize{14}{16}\selectfont}
-\renewcommand{\urantiamainfontsize}{14/16}
-\renewcommand{\footnotesize}{\fontsize{12}{15}\selectfont}
+\renewcommand{\bibbookend}{\fontsize{13.5}{16}\selectfont}
+\renewcommand{\urantiamainfontsize}{13.5/16}
+\renewcommand{\footnotesize}{\fontsize{12}{14}\selectfont}
 \setlength{\minitocafterskip}{-0.15ex}
 \renewcommand{\authorfont}{\fontsize{12}{12}\bfseries\itshape}%
 }
