--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -17,6 +17,7 @@ INTRODUCTION
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{15}{17}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13}{15}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{12}{15}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16}{19.5}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
@@ -25,7 +26,7 @@ INTRODUCTION
 
 \begin{itemize}
 \item The revised text of \bibemph{The Urantia Papers} (also known as the SRT) is based on the original Fifth Epochal Revelation,
-revised according to the present scientific knowledge.
+revised according to the present scientific knowledge and spiritual enlightenment.
 \item Study notes have been added and are marked with an asterisk, like this\ts{*}.
 \item The symbol \pc\ marks the first paragraph in the group as in the 1955 first printing, where such groups were delimited by blank lines.
 \item All distance and temperature measures have been converted to metric units, except where there was even the slightest potential for error, such as in the use of ``Jerusem miles'', which was left intact. The idiomatic expressions like ``carry his pack for a mile'' were also left intact, obviously.
