--- a/tex/title.tex
+++ b/tex/title.tex
@@ -19,6 +19,7 @@
 \tunemarkup{pghanlin}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{14}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{15}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16.5}{20}\selectfont}
 THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
@@ -28,6 +29,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{12}{20}\selectfont}
 {\itshape OF}\\
@@ -39,6 +41,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgauraone}{\fontsize{20}{22}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{16.6}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{20}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{18}{20}\selectfont}
 {\itshape\urantiapapers}\\
 }%
 {%
@@ -48,6 +51,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgcrownq}{\fontsize{19}{24}\selectfont}
 \tunemarkup{pgafour}{\fontsize{21}{24}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{15}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{13}{15}\selectfont}
 \itshape
@@ -97,7 +101,7 @@ Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aiv
 		The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk\ts{*} indicates a study note.\\[5pt]}
 \tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
 Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
-\upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\tunemarkup{pgauraone}{8in eInk}\\
+\upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pgnexus10}{10in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\tunemarkup{pgauraone}{8in eInk}\\
 \upshape\bfseries PDF date: \mytoday{}\\
 }
 \end{center}
